--- a/portfolio.html
+++ b/portfolio.html
@@ -496,6 +496,32 @@
               </div>
             </div>
             <!-- ======= 영상 ======= -->
+
+              <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+              <div class="portfolio-wrap">
+                <img
+                  src="./assets/img/portfolio/video - 19.png"
+                  class="img-fluid"
+                  alt=""
+                />
+
+                <div class="portfolio-info">
+                  <h4>최종프로젝트 - 자기소개</h4>
+                  <p>송가인 - 가인이어라 개사 및 Cover</p>
+                  <div class="portfolio-links">
+                    <a
+                      href="./assets/img/portfolio/video - 19.mp4"
+                      data-gallery="portfolioGallery"
+                      class="portfolio-lightbox"
+                      title="최종프로젝트 - 자기소개 (제인이어라)"
+                      ><i class="bx bx-plus"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- ======= 영상 ======= -->
+            
           </div>
         </div>
       </section>
