--- a/portfolio.html
+++ b/portfolio.html
@@ -510,9 +510,8 @@
                   <p>송가인 - 가인이어라 개사 및 Cover</p>
                   <div class="portfolio-links">
                     <a
-                      href="./assets/img/portfolio/video -1.mp4"
-                      data-gallery="portfolioGallery"
-                      class="portfolio-lightbox"
+                      target="_blank"
+                      href="https://youtu.be/4kRQU4xbR44"
                       title="최종프로젝트 - 자기소개 (제인이어라)"
                       ><i class="bx bx-plus"></i
                     ></a>
