--- a/portfolio.html
+++ b/portfolio.html
@@ -511,7 +511,7 @@
                   <div class="portfolio-links">
                     <a
                       target="_blank"
-                      href="https://youtu.be/4kRQU4xbR44?si=PPyOTV1YHW8z1w9y"
+                      href="https://youtu.be/4kRQU4xbR44?si=TO5TZqSuw92qjqJH"
                       title="최종프로젝트 - 자기소개 (제인이어라)"
                       ><i class="bx bx-plus"></i
                     ></a>
